name:                general-games
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/poker#readme
license:             MIT
license-file:        LICENSE
author:              Christopher A. Gorski
maintainer:          cgorski@cgorski.org
copyright:           2017 Christopher A. Gorski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Implement.Card.Standard
                     , Game.Implement.Card.Standard.Poker.AceLow
                     , Game.Implement.Card.Standard.Poker.AceHigh
                     , Game.Game.Poker
  build-depends:       base >= 4.7 && < 5
                     , permutation
                     , containers
  default-language:    Haskell2010

executable poker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , general-games
  default-language:    Haskell2010

test-suite poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , general-games
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/poker
