name:                general-games
version:             1.0.5
synopsis:            Library supporting simulation of a number of games
homepage:            https://github.com/cgorski/general-games
bug-reports:         https://github.com/cgorski/general-games/issues
license:             MIT
license-file:        LICENSE
author:              Christopher A. Gorski
maintainer:          cgorski@cgorski.org
copyright:           2017 Christopher A. Gorski
category:            Game, Poker
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:
   Library providing framework for simulating outcomes of a variety
   of games, including Poker.

source-repository head
    type:     git
    location: git://github.com/cgorski/general-games.git

executable general-games
  main-is: Main.hs
  other-modules:
  hs-source-dirs: app
  ghc-options: -threaded -feager-blackholing -rtsopts -O2 "-with-rtsopts=-N"
  build-depends:
    base >=4.7 && <5
    , general-games
    , cmdargs
  default-language: Haskell2010
                                                                
                          
library
  hs-source-dirs:      src
  exposed-modules:     Game.Implement.Card
                     , Game.Implement.Card.Standard
                     , Game.Implement.Card.Standard.Poker
                     , Game.Game.Poker
                     , Game.Evolve.LinearCreature
                     , Control.Monad.LoopWhile

  build-depends:       base >= 4.7 && < 5
                     , random-shuffle
                     , MonadRandom
                     , random
                     , monad-loops
                     , containers
                     , vector
                     , mtl
                     , monad-parallel
                     , parallel-io
                     , parallel
                     , uuid


  default-language:    Haskell2010
--  ghc-options:         -Wall
  ghc-options:         -Wall -O2

test-suite general-games-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , general-games
                     , HUnit
                     , hspec
                     , MonadRandom
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cgorski/general-games
